...
  "addressbook_no_sending": "No addresses",
  "addressbook_search": "Insert addresses, labels",
  "addressbook_swipe_delete": "Delete",
  "addressbook_swipe_edit": "Edit",
  "addressbook_swipe_export": "Export",
...
  "app_settings_wallet_order": "Wallet Order",
  "app_settings_saved_snack": "Your changes have been saved",
  "app_settings_price_feed": "Price Feed & Currency",
  "app_settings_price_feed_enable_button": "Enable Price Feed API",
  "app_settings_price_feed_disable_button": "Disable Price Feed API",
  "app_settings_price_feed_search": "Search currency code",
  "app_settings_language_search": "Search language",
  "app_settings_experimental_features": "Experimental Features",
  "app_settings_experimental_feature_watchOnlyWallets": "Watch only wallets",
  "app_settings_price_alert_content": "This will enable our privacy friendly price data feed.\nIt can be disabled anytime.",
  "app_wallets": "Wallets",
  "watch_only": "Watch only",
  "addresses_none": "No addresses found",
  "authenticate_biometric_hint": "Verify identity",
...
  "changelog_appbar": "Changelog",
  "changelog_headline": "What's new?",
  "continue": "Continue",
  "currency_AED": "United Arab Emirates Dirham",
  "currency_AFN": "Afghan Afghani",
...
  "currency_ERN": "Eritrean Nakfa",
  "currency_ETB": "Ethiopian Birr",
  "currency_EUR": "Euro",
  "currency_FJD": "Fijian Dollar",
  "currency_GBP": "British Pound Sterling",
...
  "currency_ZMW": "Zambian Kwacha",
  "currency_ZWL": "Zimbabwean Dollar",
  "export_now": "Export now",
  "id": "Id",
  "import_button": "Import",
  "import_seed_error_1": "Must be 12 words or more",
  "import_seed_error_2": "Invalid seed",
...
  "import_wif_success_snack": "Private key imported successfully",
  "jail_countdown": "seconds",
  "jail_dialog_button": "Okay",
  "jail_dialog_title": "You have reached the maximum number of retries.",
  "jail_heading": "App locked for",
...
  "periodic_reminder_backup_body": "Keep a backup of your wallet seed in a safe location to avoid losing access to your coins.",
  "periodic_reminder_backup_button": "Open Foundation Website",
  "digibyte": "DigiByte",
  "peercoinC": "DigiByte",
  "receive_enter_amount": "Please enter an amount",
...
  "server_add_server_exists": "Adding failed: Server already exists.",
  "server_add_server_no_connection": "Connection to server failed.",
  "server_add_server_wrong_genesis": "Genesis hash does not match.\nThis server does not support this coin.",
  "server_settings_title": "Server Settings",
  "server_settings_alert_generated_title": "Do you really want to remove this server?",
  "server_settings_alert_cancel": "Cancel",
  "server_settings_alert_hardcoded_title": "Hard coded server",
  "server_settings_alert_hardcoded_content": "Hard coded servers can not be deleted, only deactivated.",
...
  "setup_create_pin": "Create PIN",
  "setup_import_title": "Import Seed",
  "setup_finish": "Finish Setup",
  "setup_import_note": "Please enter the seed you wish to import. This is not to be confused with a private key.",
  "setup_pin": "Please set a PIN before you continue.",
...
  "setup_text2": "create your new DigiByte wallet",
  "setup_text3": "or",
  "setup_save_title": "Create Wallet",
  "setup_save_text1": "The following word list is called Seed. It is a complex password that will give full access to your wallet and to all your coins.",
  "share_app": "Share App",
...
  "wallet_bottom_nav_receive": "Receive",
  "wallet_bottom_nav_send": "Send",
  "wallet_bottom_nav_tx": "Transactions",
  "wallet_connected": "Connected",
  "wallet_offline": "offline",
  "wallet_pop_menu_paperwallet": "Sweep Paper Wallet",
  "wallet_pop_menu_wif": "Import Private Key",
  "wallet_pop_menu_signing": "Sign Messages",
  "wallet_pop_menu_signing_transactions": "Sign Transaction",
  "wallet_pop_menu_slice_migration": "Slice Migration",
  "wallet_pop_menu_servers": "Adjust Servers",
  "wallet_pop_menu_verification": "Verify Messages",
  "wallet_pop_menu_change_title": "Change Title",
  "wallet_receive": "Receive",
  "wallet_title_edit": "Edit Wallet Title",
...
  "verify_step_3": "Enter Signature",
  "sign_step_1_description": "Select the address which should sign the message",
  "sign_step_1_button": "Select",
  "sign_step_1_button_alt": "Change",
  "sign_step_2": "Enter Message",
  "sign_step_3": "Sign Message",
  "sign_step_3_description": "This is your signature.",
  "sign_step_3_button": "Sign",
  "verify_step_3_button": "Verify",
  "sign_step_3_button_alt": "Copy signature to clipboard",
...
  "verify_success": "Message verified.",
  "verify_fail": "Message could not be verified.",
  "sign_reset_button": "Reset",
  "sign_reset_alert_title": "Do you want to start over?",
  "sign_reset_alert_body": "This will reset all fields and clear your signature.",
...
  "sign_transaction_confirmation_input_signed": "Signed",
  "sign_transaction_confirmation_input_unsigned": "Not signed",
  "sign_transaction_confirmation_broadcast": "Broadcast",
  "sign_transaction_confirmation_broadcast_snack": "Transaction broadcast attempted",
  "sign_transaction_confirmation_dialog_title": "Broadcast Transaction",
...
  "sign_transaction_confirmation_transaction_id": "Transaction id",
  "double_tap_to_copy": "You may double tap to copy the text.",
  "hide_wallet": "Hide Wallet",
  "hide_wallet_action": "Hide",
  "unhide_wallet": "Unhide Wallet",
  "unhide_wallet_action": "Unhide",
  "hide_wallet_description": "This will hide the wallet from the wallet list. Hidden wallets available on the bottom of the list. You can unhide it anytime.",
  "unhide_wallet_description": "This will unhide the wallet and show it in the wallet list again.",
  "hide_hidden_wallets_list": "Hide $nOfHiddenWallets Hidden Wallets",
  "show_hidden_wallets_list": "Show $nOfHiddenWallets Hidden Wallets",
  "delete_wallet": "Delete Wallet",
  "delte_wallet_description": "This will delete the wallet and all its data. You can't undo this action."
}
...
