...
                  child: Column(
                    mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                    children: [
                      Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 16),
                        child: SwitchListTile(
                          key: const Key('setupApiTickerSwitchKey'),
                          title: Text(
                            AppLocalizations.instance
                                .translate('setup_price_feed_allow'),
                            style: const TextStyle(
                              color: Colors.white,
                            ),
...
                        ),
                        maxLines: 2,
                      ),
                      Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 16),
                        child: SwitchListTile(
                          key: const Key('setupApiBGSwitchKey'),
                          title: Text(
                            AppLocalizations.instance
                                .translate('setup_bg_sync_allow'),
                            style: const TextStyle(color: Colors.white),
                          ),
                          value: _bgSyncdAllowed,
...
