...
                            style: Theme.of(context).textTheme.titleLarge,
                          ),
                        ],
                      ),
                      TextFormField(
                        textInputAction: TextInputAction.done,
                        key: const Key('transactionHexInput'),
                        controller: _txInputController,
                        autocorrect: false,
                        minLines: 5,
                        maxLines: 5,
                        onChanged: (_) => setState(() {}), // to activate sign button on key stroke
                        decoration: InputDecoration(
...
                        active: _signingAddress.isNotEmpty && _txInputController.text.isNotEmpty,
                      ),
                      _signingError.isNotEmpty
                          ? Padding(
                              padding: const EdgeInsets.symmetric(vertical: 10),
                              child: Text(
                                key: const Key('signingError'),
                                '${AppLocalizations.instance.translate('sign_transaction_signing_failed')}\n$_signingError',
                                textAlign: TextAlign.center,
                                style: TextStyle(
                                  color: Theme.of(context).colorScheme.error,
                                ),
                              ),
...
